<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="362dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/detailTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/detailTextView"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="371dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/detailViewListB"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detailButton1"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:background="@color/colorButton"/>

        <Button
            android:id="@+id/detailEditB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_margin="2dp"
            android:background="@color/colorButton"
            android:text="@string/detailButton3" />

        <Button
            android:id="@+id/detailAddMoreB"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detailButton2"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:background="@color/colorButton"/>
    </LinearLayout>

</LinearLayout>